added auto-creation of db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=pgpass
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=create
