configures database initialization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=pgpass
 spring.datasource.url=jdbc:postgresql://localhost:5432/contact-browser
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
