--- a/src/webapp/contact-browser/package.json
+++ b/src/webapp/contact-browser/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
+    "axios": "^0.18.0",
     "next": "^6.1.1",
     "prop-types": "^15.6.2",
+    "rc-tree": "^1.13.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
